* Added aria-describedby attribute to description paragraph. * Fixed an issue where the small description would wrap parallel to the toggle control.

--- a/blocks/inspector-controls/base-control/style.scss
+++ b/blocks/inspector-controls/base-control/style.scss
@@ -9,9 +9,8 @@
 }
 
 .blocks-base-control__description {
-	display: block;
+	min-width: 100%;
 	margin-top: 5px;
 	margin-bottom: 0;
-	font-style: italic;
 	color: $dark-gray-300;
 }
